# onecut

./: .taurignore  434.rs  454.rs  Cargo.toml  Trunk.toml  config  index.html  дщд.rs
src/: app.rs  bridge.js  bridge.rs  main.rs  models.rs  tauri_api.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: dxf_processor.rs  lib.rs  main.rs  price_calculator.rs  state.rs
src-tauri/src/cutting_data/: laser_cutting_speeds.rs  mod.rs
src/components/: main_content.rs
src/dxf/: dxf_processor.rs  mod.rs
src/handlers/: clear_handlers.rs  example.rs  handle_bending_points_input_change.rs  handle_bending_points_radio_change.rs  handle_clear_thickness.rs  handle_cut_length_input.rs  handle_cutting_type_change.rs  handle_file_select.rs  handle_get_price_all_parts.rs  handle_get_price_one_part.rs  handle_input_mode_change.rs  handle_margin_change.rs  handle_material_change.rs  handle_material_price_change.rs  handle_parts_count_change.rs  handle_radio_change.rs  handle_thickness_input.rs  handle_thickness_select.rs  handle_threads_inserts_mats_input_change.rs  handle_threads_inserts_mats_radio_change.rs  mod.rs
static/: style.css
