[package]
name = "onecut_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "Event",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Element",
]}
dxf = "0.6.0"
nalgebra = "0.33.2"
splines = "4.4.2"
glam = "0.30.0"
kurbo = "0.11.1"
log = "0.4"
wasm-logger = "0.2"
chrono = "0.4"









[workspace]
members = ["src-tauri"]
